Quebre js em arquivos

--- a/vanilla/index.html
+++ b/vanilla/index.html
@@ -32,7 +32,7 @@
           Registrar:
           <input type="checkbox" name="signup" />
         </label>
-        <button type="submit">Vai</button>
+        <button type="submit">Entrar</button>
       </form>
     </div>
     <div id="todos">
@@ -49,204 +49,10 @@
     </div>
 
     <script src="https://unpkg.com/@supabase/supabase-js"></script>
-    <script>
-      // IMPORTS
-      const { createClient } = supabase;
-
-      // CONSTS
-      const ALERT = {
-        SIGNUP: 0,
-        LOGIN: 1,
-        ERROR_EMAIL: 2,
-        ERROR_TAREFA: 3,
-        ERROR_TAREFA_UPDATE: 4,
-        ERROR_TAREFA_DELETE: 5,
-        TIMEOUT: 2000,
-      };
-
-      let userSession;
-
-      // SUPABASE
-      const SUPABASE_KEY =
-        "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJyb2xlIjoiYW5vbiIsImlhdCI6MTYxOTYyNTM3NCwiZXhwIjoxOTM1MjAxMzc0fQ.t8S4NG11PShRKWXlce79u9wdI-Z7XjTrGZiEevyiXyw";
-      const SUPABASE_URL = "https://vizznmgnqrvrjpnotjuw.supabase.co";
-
-      supabase = createClient(SUPABASE_URL, SUPABASE_KEY);
-
-      // ELEMENTS QUERIES
-      const $alerts = document.querySelectorAll("h2", "#alerts");
-      const $login = document.getElementById("login");
-      const $loginForm = document.getElementById("login-form");
-      const $todos = document.getElementById("todos");
-      const $todoForm = document.getElementById("todo-form");
-      const $todoList = document.getElementById("todo-list");
-
-      const toggleAlert = (alert) => {
-        $alerts[alert].style.display = "block";
-        setTimeout(() => {
-          $alerts[alert].style.display = "none";
-        }, ALERT.TIMEOUT);
-      };
-
-      // CALLBACKS / LISTENERS
-      const onLogin = async ({ email, password }) => {
-        let { user, error } = await supabase.auth.signIn({
-          email,
-          password,
-        });
-
-        if (error) {
-          toggleAlert(ALERT.ERROR_EMAIL);
-          return;
-        }
-
-        toggleAlert(ALERT.LOGIN);
-        $loginForm.style.display = "none";
-        $todos.style.display = "block";
-
-
-        $todoForm.addEventListener("submit", onCreateTodo);
-        $todoList.addEventListener("click", onTodoClick);
-        $todoList.addEventListener("change", onTodoChange);
-
-        userSession = user;
-
-        queryTodos: {
-          let { data: todos, error } = await supabase.from("todos").select("*")
-             .order('inserted_at', { ascending: true});
-
-          renderizeTarefa(todos);
-        }
-      };
-
-      const onSignUp = async ({ email, password }) => {
-        let { user, error } = await supabase.auth.signUp({
-          email,
-          password,
-        });
-
-        if (error) {
-          toggleAlert(ALERT.ERROR_EMAIL);
-          return;
-        }
-
-        toggleAlert(ALERT.SIGNUP);
-        $loginForm.style.display = "none";
-        $todos.style.display = "block";
-
-        $todoForm.addEventListener("submit", onCreateTodo);
-        $todoList.addEventListener("click", onTodoClick);
-        $todoList.addEventListener("change", onTodoChange);
-
-        userSession = user;
-        console.log(userSession);
-      };
-
-      const onLoginSubmit = async (e) => {
-        e.preventDefault();
-
-        const email = e.target.email.value;
-        const password = e.target.password.value;
-        const signUp = e.target.signup.checked;
-
-        if (e.target.signup.checked) {
-          onSignUp({ email, password });
-        } else {
-          onLogin({ email, password });
-        }
-      };
-
-      const onCreateTodo = async (e) => {
-        e.preventDefault();
-
-        const tarefa = e.target.tarefa.value;
-
-        if (tarefa) {
-          const { data, error } = await supabase.from("todos").insert([
-            {
-              user_id: userSession.id,
-              task: tarefa,
-            },
-          ]);
-
-          if (error) {
-            console.error(error);
-            toggleAlert(ALERT.ERROR_TAREFA);
-            return;
-          }
-
-          renderizeTarefa(data);
-        }
-      };
-
-      const onTodoChange= async (e) => {
-        console.log('todo change', e);
-        let item = e.target.closest('li');
-        let id = item.dataset.id;
-
-        if (e.target.type === 'text') {
-
-          const { data, error } = await supabase
-            .from('todos')
-            .update({ task: e.target.value })
-            .eq('id', id)
-
-          if (error) {
-            console.error(error);
-            toggleAlert(ALERT.ERROR_TAREFA_UPDATE);
-            return;
-          }
-        } else if (e.target.type === 'checkbox') {
-          // complete task
-          const { data, error } = await supabase
-            .from('todos')
-            .update({ is_complete: e.target.checked })
-            .eq('id', id)
-
-          if (error) {
-            console.error(error);
-            toggleAlert(ALERT.ERROR_TAREFA_UPDATE);
-            return;
-          }
-        }
-      }
-      const onTodoClick = async (e) => {
-        console.log('todo click', e);
-        let item = e.target.closest('li');
-        let id = item.dataset.id;
-
-        if (e.target.nodeName === 'BUTTON') {
-          // delete task
-          const { data, error } = await supabase
-            .from('todos')
-            .delete()
-            .eq('id', id)
-
-          if (error) {
-            console.error(error);
-            toggleAlert(ALERT.ERROR_TAREFA_DELETE);
-            return;
-          }
-
-          item.remove();
-        } 
-      }
-
-      const renderizeTarefa = (tarefas) => {
-        tarefas.forEach(tarefa => {
-          console.log(tarefa.is_complete, 'iscomplete');
-          $todoList.innerHTML += `
-            <li data-id="${tarefa.id}">
-              <input type="text" name="tarefa" value="${tarefa.task}" />
-              <input type="checkbox" name="completa" ${tarefa.is_complete ? 'checked="true"' : ''} />
-              <button name="remove">x</button>
-            </li>
-          `;
-        })
-      };
-
-      // ADDING CALLBACKS / LISTENERS
-      $loginForm.addEventListener("submit", onLoginSubmit);
-    </script>
+    <script src="./supabase-client.js"></script>
+    <script src="./dom-elements.js"></script>
+    <script src="./alerts.js" ></script>
+    <script src="./user.js"></script>
+    <script src="./todos.js"></script>
   </body>
 </html>
