Mude js para JS

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Vanilla js + supabase</title>
+    <title>Vanilla JS + supabase</title>
     <style>
       #todos,
       #alerts > h2 {
