Substitui com versão vue

--- a/index.html
+++ b/index.html
@@ -1,58 +1,1 @@
-<html>
-  <head>
-    <title>Vanilla JS + supabase</title>
-    <style>
-      #todos,
-      #alerts > h2 {
-        display: none;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>Your TODO</h1>
-    <div id="alerts">
-      <h2 id="alert-signup">Registrado com sucesso</h2>
-      <h2 id="alert-login">Logado com sucesso</h2>
-      <h2 id="alert-error-email">Houve um erro, você confirmou seu email?</h2>
-      <h2 id="alert-error-tarefa">Houve um erro com sua tarefa</h2>
-      <h2 id="alert-error-tarefa-update">Houve um erro ao atualizer sua tarefa</h2>
-      <h2 id="alert-error-tarefa-delete">Houve um erro ao remover sua tarefa</h2>
-    </div>
-    <div id="login">
-      <form id="login-form">
-        <label>
-          Email:
-          <input type="text" name="email" />
-        </label>
-        <label>
-          Senha:
-          <input type="password" name="password" />
-        </label>
-        <label>
-          Registrar:
-          <input type="checkbox" name="signup" />
-        </label>
-        <button type="submit">Entrar</button>
-      </form>
-    </div>
-    <div id="todos">
-      <h2>TODOS</h2>
-      <form id="todo-form">
-        <label>
-          Tarefa:
-          <input type="text" name="tarefa" />
-        </label>
-        <button type="submit">Registrar</button>
-      </form>
-      <ul id="todo-list">
-      </li>
-    </div>
-
-    <script src="https://unpkg.com/@supabase/supabase-js"></script>
-    <script src="./supabase-client.js"></script>
-    <script src="./dom-elements.js"></script>
-    <script src="./alerts.js" ></script>
-    <script src="./user.js"></script>
-    <script src="./todos.js"></script>
-  </body>
-</html>
+<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><title>todo-supabase-vue</title><link href="/js/about.8cebd3e7.js" rel="prefetch"><link href="/js/login.def23396.js" rel="prefetch"><link href="/css/app.dec57050.css" rel="preload" as="style"><link href="/css/chunk-vendors.3983a32d.css" rel="preload" as="style"><link href="/js/app.b226c0b5.js" rel="preload" as="script"><link href="/js/chunk-vendors.aca508fc.js" rel="preload" as="script"><link href="/css/chunk-vendors.3983a32d.css" rel="stylesheet"><link href="/css/app.dec57050.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but todo-supabase-vue doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/js/chunk-vendors.aca508fc.js"></script><script src="/js/app.b226c0b5.js"></script></body></html>
